# vimacs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md
include/: Vimacs.hpp
incs/: ft_vim.h
src/: iohandler.rs  lib.rs  main.rs
srcs/: IOHandler.cpp  Terminal.cpp  Utils.cpp  bufferHandler.cpp  main.c  main.cpp
